--- a/src/app/pages/browse/browse.component.html
+++ b/src/app/pages/browse/browse.component.html
@@ -1,3 +1,9 @@
 <app-header [userImg]="userProfileImg"/>
 <!-- component -->
 <app-banner />
+<app-movie-carousel [title]="'Popular on Netflix'" [videoContents]="movies"/>
+<app-movie-carousel [title]="'Trending TV Shows'" [videoContents]="tvShows"/>
+<app-movie-carousel [title]="'Now Playing Movies'" [videoContents]="nowPlayingMovies"/>
+<app-movie-carousel [title]="'Popular Movies'" [videoContents]="popularMovies"/>
+<app-movie-carousel [title]="'Top Rated Movies'" [videoContents]="topRatedMovies"/>
+<app-movie-carousel [title]="'Upcoming Movies'" [videoContents]="upcomingMovies"/>
