--- a/src/app/core/components/banner/banner.component.html
+++ b/src/app/core/components/banner/banner.component.html
@@ -1,9 +1,9 @@
-<iframe class="w-full h-full absolute" src="https://www.youtube.com/embed/aIBsnOyJB7Y?autoplay=1&mute=1&loop=1&controls=0" frameborder="0"></iframe>
+<iframe class="w-full h-full absolute" [src]="videoUrl" frameborder="0"></iframe>
 
 <div class="h-screen bg-white">
     <div class="pt-[20%] px-24 absolute h-full text-white bg-gradient-to-r from-black">
-        <h1 class="text-6xl font-bold">Happy Feet</h1>
-        <p class="inline-block py-6 text-xl w-1/4 flex-wrap">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti repudiandae ratione libero expedita eveniet tempore beatae modi eligendi quia iusto a, ipsum veritatis dolorum est animi unde incidunt fugiat nam aliquam natus facilis atque quisquam vel! Perspiciatis debitis repellat sed fugiat sequi, quod consequatur dolores culpa atque libero, eos commodi!</p>
+        <h1 class="text-6xl font-bold">{{title}}</h1>
+        <p class="inline-block py-6 text-xl w-1/4 flex-wrap">{{overview}}</p>
         <div>
             <button class="bg-white text-black py-4 px-12 text-xl rounded-lg hover:bg-opacity-70 transition-[1s]">
                 ▶Play
