--- a/src/app/pages/browse/browse.component.html
+++ b/src/app/pages/browse/browse.component.html
@@ -1,6 +1,6 @@
 <app-header [userImg]="userProfileImg"/>
 <!-- component -->
-<app-banner />
+<app-banner [title]="(bannerDetail$ | async)?.original_title" [overview]="(bannerDetail$ | async)?.overview" [key]="(bannerVideo$ | async).results[0].key"/>
 <app-movie-carousel [title]="'Popular on Netflix'" [videoContents]="movies"/>
 <app-movie-carousel [title]="'Trending TV Shows'" [videoContents]="tvShows"/>
 <app-movie-carousel [title]="'Now Playing Movies'" [videoContents]="nowPlayingMovies"/>
